k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: najmuj-mieszkanie
  labels:
    app.kubernetes.io/name: najmuj-mieszkanie
